<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LaMiaSpesaApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="example">this is a fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">LaMiaSpesa</string>
    <string name="titolotop">titolo</string>
	<string name="immagine_prodotto">thumview del prodotto</string>
	<string name="login_label">Login</string>
	<string name="email_address">Email address</string>
	<string name="password">Password</string>
	<string name="Sign_in">Sign in</string>
	<string name="Password">Password</string>
	<string name="New_user">New user</string>
	<string name="titolo"></string>
	<string name="app_id">494748670648076</string>
	<string name="signup_title">Registrazione Utente</string>
</resources>